<resources>
    <string name="app_name">Datura Firewall</string>
    <string name="app_short_name">Firewall</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="global_settings">Global settings</string>
    <string name="global_settings_for_all">Global settings for all apps</string>
    <string name="use_defaults">Use defaults</string>
    <string name="block_cleartext_etc">Block cleartext traffic, ads, and trackers</string>
    <string name="block_cleartext">Block cleartext traffic</string>
    <string name="block_ads_trackers">Block ads and trackers</string>
    <string name="system_apps">System Apps</string>
    <string name="allow_background_data">Allow background network access</string>
    <string name="allow_wifi_data">Allow Wi-Fi data</string>
    <string name="allow_vpn_data">Allow VPN data</string>
    <string name="app_name_text">App Name</string>
    <string name="setting_status">Setting status</string>
    <string name="installed_apps">Installed apps</string>
    <string name="allow_mobile_data">Allow mobile data</string>
    <string name="default_settings">Default settings</string>
    <string name="status_text_placeholder">Allow %1$s</string>
    <string name="error_setting_preference">Error while setting preference for %1$s</string>
    <string name="search">Search</string>
    <string name="sort_by_last_used">Sort by last used</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="allow_cleartext_traffic">Allow cleartext traffic</string>
    <string name="allow_all_network">Allow network access</string>
    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_summary">A firewall application using Android\'s internal network API.</string>
    <string name="about_version">Version: %s</string>
    <string name="about_license">License: <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache2</a></string>
    <string name="about_author">Written by: <a href="https://github.com/esecoder">Ese Udom</a> and <a href="https://github.com/chirayudesai">Chirayu Desai</a></string>
    <string name="about_design">Design by: <a href="https://www.glennsorrentino.com/">Glenn Sorrentino</a></string>
    <string name="about_sponsor">Sponsored by: <a href="https://www.calyxinstitute.org">Calyx Institute</a> for use in <a href="https://calyxos.org">CalyxOS</a></string>
    <string name="about_source_code">Source Code: https://gitlab.com/CalyxOS/platform_packages_apps_Firewall</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="warning">Changes to these settings will change the default settings per app permanently and unsetting it will not return to their initial states</string>
    <string name="private_dns_notice">Requires Private DNS configuration</string>

    <!-- packages/apps/Settings/res/values/strings.xml -->
    <!-- Message of private dns that provides a help link. [CHAR LIMIT=NONE] -->
    <string name="private_dns_help_message"><annotation id="url">Learn more</annotation> about Private DNS features</string>
    <!-- Message to display when private dns is on. [CHAR LIMIT=10] -->
    <string name="private_dns_mode_on">On</string>
    <string name="help_uri_private_dns" translatable="false"></string>

    <!-- packages/apps/Settings/res/values/calyx_strings.xml -->
    <string name="private_dns_mode_cloudflare" translatable="false">Cloudflare DNS</string>

    <!-- frameworks/base/packages/SettingsLib/res/values/strings.xml -->
    <!-- Summary for connected network without internet due to private dns validation failed [CHAR LIMIT=NONE] -->
    <string name="private_dns_broken">Private DNS server cannot be accessed</string>
    <!-- Developer option setting for Private DNS -->
    <string name="select_private_dns_configuration_title">Private DNS</string>
    <string name="select_private_dns_configuration_dialog_title">Select Private DNS Mode</string>
    <string name="private_dns_mode_off">Off</string>
    <string name="private_dns_mode_opportunistic">Automatic</string>
    <string name="private_dns_mode_provider">Private DNS provider hostname</string>
    <string name="private_dns_mode_provider_hostname_hint">Enter hostname of DNS provider</string>
    <string name="private_dns_mode_provider_failure">Couldn\'t connect</string>

</resources>