<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/main_title_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:text="@string/use_defaults" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/app_use_default_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/main_title_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:text="@string/block_cleartext" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/app_cleartext_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_gravity="end"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/main_title_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:text="@string/block_ads_trackers" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/app_block_ads_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"/>

    </LinearLayout>

</LinearLayout>