<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:menu="@menu/firewall_settings_menu">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/color_primary_dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:theme="@style/ToolBarStyle"
            app:popupTheme="@style/ToolBarPopupStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/container_padding_size"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_settings"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

        <include layout="@layout/fragment_use_defaults"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <include layout="@layout/fragment_cleartext_traffic"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <include layout="@layout/fragment_block_ad_trackers"
            android:layout_marginBottom="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/container_padding_size"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_apps"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/system_apps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/fragment_app_setting_accordion" />

        <TextView
            android:id="@+id/installed_apps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installed_apps"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/installed_apps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/fragment_app_setting_accordion"/>

    </LinearLayout>

</LinearLayout>